<resources>
    <string name="app_name">华医之春</string>
    <string name="apk_name">hyzc.apk</string>
    <string name="apk_short_name">hyzc</string>
    <string name="department_introduce">【康复大厅】吴桥县中西医结合医院康复疼痛科，利用针灸，拔罐，艾灸，推拿按摩，远红外线理疗，磁疗，腊疗等传统中医技术，结合现代医学治疗设备，利用【内热成像检查仪】【骨密度检测仪】【骨质疏松治疗仪】【中药四肢薰蒸仪】【热磁恒波治疗仪】以及射频消融，臭氧，椎间孔镜技术，为颈肩腰腿疼的患者解除病痛！吴桥县中西医结合医院设置康复大厅，疼痛门诊，康复疼痛住院病区，欢迎预约就诊！电话0317--8323530</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="pwd">设置密码</string>
    <string name="pwd_confirm">确认密码</string>
    <string name="phone">手机号</string>
    <string name="autoLogin">自动登陆</string>
    <string name="rememberPwd">记住密码</string>
    <string name="register">注册</string>
    <string name="home">主页</string>
    <string name="verify">获取验证码</string>
    <string name="verification">验证码</string>
    <string name="reVerify">秒后，点击重试</string>
    <string name="drug">药品</string>
    <string name="health">健康教育</string>
    <string name="connect_error">网络连接异常，请检查网络设置或者稍后再试</string>
    <string name="hint_search">输入关键字拼音搜索</string>
    <string name="loading">努力加载中，请稍侯</string>
    <string name="province">省份</string>
    <string name="city">地市</string>
    <string name="area">区县</string>
    <string name="email">邮箱</string>
    <string name="hint_email">用于找回密码</string>
    <string name="account_info">账号信息</string>
    <string name="id_info">身份信息</string>
    <string name="id_number">身份证号</string>
    <string name="male">男</string>
    <string name="sex">性别</string>
    <string name="female">女</string>
    <string name="address_detail">详细地址</string>
    <string name="test">测试</string>
    <string name="account_type">账号类型</string>
    <string name="patient">用户</string>
    <string name="pharmacy">药店</string>
    <string name="doctor">医生</string>
    <string name="cert_info">证书信息</string>
    <string name="doctor_cert">医生资格证</string>
    <string name="name">姓名</string>
    <string name="upload_img">上传图片</string>
    <string name="hospital">医院</string>
    <string name="department">科室</string>
    <string name="professional">专业</string>
    <string name="doctor_signature">医生电子签名</string>
    <string name="remark">简介</string>
    <string name="organization_cert">机构代码证</string>
    <string name="license_cert">营业执照</string>
    <string name="permit_cert">经营许可证</string>
    <string name="pharmacy_name">药店名称</string>
    <string name="pharmacy_corporation">药店法人</string>
    <string name="yibao">医保</string>
    <string name="chengzhen">城镇</string>
    <string name="nonghe">农合</string>
    <string name="pharmacy_flag">药店标志</string>
    <string name="booking">开始预约</string>
    <string name="pick_doctor">请选择期望问诊的医生</string>
    <string name="introduce_page">引导页面</string>
    <string name="splash_page">闪屏界面</string>
    <string name="skip_introduce">跳过引导，马上体验</string>
    <string name="doctor_introduce">医生简介</string>
    <string name="pharmacy_introduce">药店简介</string>
    <string name="my">我的</string>
    <string name="personal">个人信息</string>
    <string name="my_appointment">我的预约</string>
    <string name="age">年龄</string>
    <string name="disease_description">病情描述</string>
    <string name="appoint_now">马上预约</string>
    <string name="chat_online">在线咨询</string>
    <string name="back">返回</string>
    <string name="my_account_info">账号资料</string>
    <string name="modify">修改</string>
    <string name="fun_undo">功能正在测试，敬请期待！</string>
    <string name="appointment_id">预约单号</string>
    <string name="appointment_status">预约状态</string>
    <string name="appointment_time">预约时间</string>
    <string name="appointment_detail">预约详情</string>
    <string name="doctor_response">医生回复</string>
    <string name="doctor_response_time">回复时间</string>
    <string name="doctor_response_way">处理方式</string>
    <string name="appointment_info">预约信息</string>
    <string name="response_info">回复信息</string>
    <string name="patient_info">用户信息</string>
    <string name="no_more_data">没有更多数据了!</string>
    <string name="no_response">未回复</string>
    <string name="has_response">已回复</string>
    <string name="appointment_add_time">预约提交时间</string>
    <string name="once_more_to_quit">再按一次退出应用</string>
    <string name="doctor_detail">医生详情</string>
    <string name="disease_description_hint">请输入您的病情和治疗历史</string>
    <string name="choose_time">选择预约时间</string>
    <string name="appointment_score">预约评分</string>
    <string name="doctor_prescribe">增加药品</string>
    <string name="submit">确认</string>
    <string name="prescribe">药品列表</string>
    <string name="can_not_be_null">不能为空</string>
    <string name="cancel">取消</string>
    <string name="cancel_appointment">取消此预约单</string>
    <string name="medicine_name">药品名称</string>
    <string name="medicine_specification">药品规格</string>
    <string name="medicine_unit">药品单位</string>
    <string name="medicine_common_name">通用名称</string>
    <string name="medicine_origin">药品产地</string>
    <string name="medicine_care">医保类型</string>
    <string name="medicine_number">药品数量</string>
    <string name="medicine_remark">医嘱</string>
    <string name="clear">清除</string>
    <string name="hint_search_pinyin">请输入药品的拼音（最少2个字母）</string>
    <string name="medicine_usage">药品用法</string>
    <string name="medicine_usage_select">选择药品用法</string>
    <string name="select">选择</string>
    <string name="appointment_date">预约日期</string>
    <string name="choose_date">选择预约日期</string>
    <string name="appointment_limit">每日预约量</string>
    <string name="empty_content">无</string>
    <string name="wechat">微信号</string>
    <string name="isOrder">可预约</string>
    <string name="prescribe_detail">药方详情</string>
    <string name="patient_phone">用户手机号</string>
    <string name="prescribe_build_time">开药时间</string>
    <string name="prescribe_get_time">取药时间</string>
    <string name="prescribe_has_got">已取药</string>
    <string name="introduce">简介</string>
    <string name="select_address">选择省市区</string>
    <string name="address">地址</string>
    <string name="suggest_pharmacy">推荐药店</string>
    <string name="prescription_id">药方单号</string>
    <string name="prescription_status">药方状态</string>
    <string name="prescription_time">开药时间</string>
    <string name="disease_description_module">病情模板</string>
    <string name="disease_description_module_select">选择病情模板</string>
    <string name="response_module_select">选择回应模板</string>
    <string name="app_slogon">即时通讯云领导者</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="prompt">提示</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="stop_record">停止录制</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="record_finish_toast">录制完毕，文件存储在%s</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在加载数据</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_not_found">找不到这个群组</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="join_need_owner_approval">加入公开群需要群主同意</string>
    <string name="blacklist">黑名单列表</string>
    <string name="serach_group_message">消息搜索</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="village_doctor">村医</string>
    <string name="director_doctor">主任医师</string>
    <string name="vice_director_doctor">副主任医师</string>
    <string name="general_doctor">医师</string>
    <string name="chief_doctor">主治医师</string>
    <string name="doctor_title">医生职称</string>
</resources>