<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selector_shape_transparent_grey"
    android:padding="3dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_appointmentId"
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_id"/>

        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/tv_appointStatus"
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_status"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_doctor"
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor"/>

        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/tv_appointmentTime"
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_time"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_description"
        android:padding="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disease_description"/>

</LinearLayout>