<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.yimeng.hyzc.activity.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="16dp" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:inputType="numberPassword"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/cb_remeber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:gravity="center"
            android:text="@string/rememberPwd" />

        <CheckBox
            android:id="@+id/cb_auto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:gravity="center"
            android:text="@string/autoLogin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register" />
    </LinearLayout>
    <!--<EditText-->
    <!--android:padding="16dp"-->
    <!--android:inputType="numberPassword"-->
    <!--android:id="@+id/et_pwd_confirm"-->
    <!--android:hint="@string/pwd_confirm"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->
    <!--<EditText-->
    <!--android:padding="16dp"-->
    <!--android:id="@+id/et_phone"-->
    <!--android:hint="@string/phone"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->

</LinearLayout>
